// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`list-item.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
proseWrap: "always"
                                                      printWidth: 80 (default) |
=====================================input======================================
- 1
        foo
- 2\\
        bar
- \`3
        baz\`

=====================================output=====================================
- 1 foo
- 2\\
  bar
- \`3       baz\`

================================================================================
`;

exports[`list-item.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
                                                      printWidth: 80 (default) |
=====================================input======================================
- 1
        foo
- 2\\
        bar
- \`3
        baz\`

=====================================output=====================================
- 1
  foo
- 2\\
  bar
- \`3
        baz\`

================================================================================
`;
